python/src/rabbit/manifests/service.yaml
# service for rabbitmq
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 15672
      targetPort: 15672
    - name: amqp
      port: 5672
      targetPort: 5672
  selector:
    app: rabbitmq
