python/src/rabbit/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  # annotations:
  #   kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: rabbitmq.localhost.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
